[gd_scene load_steps=10 format=3 uid="uid://djwrb4bfed3up"]

[ext_resource type="Texture2D" uid="uid://d2ii77wxwvry5" path="res://assets/sprites/objects/throwables/fire/Fire_Mango.png" id="1_f61ro"]
[ext_resource type="Script" path="res://scenes/entities/objects/throwables/fire/mango_pickup.gd" id="1_r3l62"]
[ext_resource type="Texture2D" uid="uid://bocxbuatv3htb" path="res://assets/sprites/UI/Keycaps/Keycaps-D.png" id="3_b17a8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iakft"]
size = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvyur"]
atlas = ExtResource("1_f61ro")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfyqb"]
atlas = ExtResource("1_f61ro")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmd7g"]
atlas = ExtResource("1_f61ro")
region = Rect2(36, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_kjper"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvyur")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfyqb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmd7g")
}],
"loop": true,
"name": &"pickup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fi4m"]

[node name="MangoPickup" type="StaticBody2D"]
script = ExtResource("1_r3l62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iakft")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kjper")
animation = &"idle"

[node name="ActionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
shape = SubResource("RectangleShape2D_7fi4m")

[node name="pickup" type="AudioStreamPlayer2D" parent="."]

[node name="ActionButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, -30)
texture = ExtResource("3_b17a8")

[connection signal="body_entered" from="ActionArea" to="." method="_on_action_area_body_entered"]
[connection signal="body_exited" from="ActionArea" to="." method="_on_action_area_body_exited"]
